--- a/daili.yaml
+++ b/daili.yaml
@@ -41,12 +41,12 @@ proxies:
   password: desperadoj.com_free_proxy_d39m
   cipher: aes-128-gcm
   success_rate: 100.0
-  minimum: 6.48
-  maximum: 7.74
-  average: 7.15
-  UpdateDay: '2022-05-04T00:30:48.134824'
+  minimum: 6.15
+  maximum: 7.79
+  average: 7.19
+  UpdateDay: '2022-05-04T03:30:46.274304'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 29936
+  Rank: 30037
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -60,20 +60,21 @@ proxies:
   average: 10.11
   UpdateDay: '2022-05-03T18:30:50.145520'
   PFirstFoundDay: '2022-03-14T10:17:16.436055'
-  Rank: 26556
+  Rank: 26656
 - name: 101.91.121.247:50004@ss
-  type: ss
   server: 101.91.121.247
   port: 50004
-  cipher: aes-256-cfb
+  type: ss
+  country: "\U0001F1E8\U0001F1F3 CN"
   password: '4415934295'
+  cipher: aes-256-cfb
   success_rate: 100.0
-  minimum: 9.7
-  maximum: 10.55
-  average: 10.02
-  UpdateDay: '2022-05-04T00:30:48.126148'
+  minimum: 10.07
+  maximum: 10.8
+  average: 10.55
+  UpdateDay: '2022-05-04T03:30:46.280991'
   PFirstFoundDay: '2022-03-11T23:29:04.876882'
-  Rank: 22502
+  Rank: 22514
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
   port: 1443
@@ -83,12 +84,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 69.5
-  maximum: 96.7
-  average: 86.72
-  UpdateDay: '2022-05-04T00:30:49.456270'
+  minimum: 60.26
+  maximum: 91.01
+  average: 70.97
+  UpdateDay: '2022-05-04T03:30:49.767206'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 20056
+  Rank: 20117
 - name: fkgfw-prod.i.sxl.cn:443@ss
   server: fkgfw-prod.i.sxl.cn
   port: 443
@@ -101,7 +102,7 @@ proxies:
   average: 89.1
   UpdateDay: '2022-03-24T18:35:12.668742'
   PFirstFoundDay: '2022-03-19T12:33:06.851449'
-  Rank: 15900
+  Rank: 16000
 - name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
   port: 21089
@@ -111,27 +112,27 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 12.98
-  maximum: 41.58
-  average: 30.67
-  UpdateDay: '2022-05-04T00:30:48.209214'
+  minimum: 38.46
+  maximum: 48.41
+  average: 42.53
+  UpdateDay: '2022-05-04T03:30:47.412076'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 15648
+  Rank: 15744
 - name: 2.58.242.43:443@trojan
   server: 2.58.242.43
   port: 443
   type: trojan
   country: "\U0001F1F9\U0001F1FC TW"
-  password: YWVzLTI1Ni1nY206eHBRd3lWNFc1RmRBNk5NQU5KSng3M1VT
+  password: 7a9a3bb7-43b4YWVzLTI1Ni1nY206eHBRd3lWNFc1RmRBNk5NQU5KSng3M1VT
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 74.47
-  maximum: 88.64
-  average: 81.31
-  UpdateDay: '2022-05-04T00:30:51.481993'
+  minimum: 73.45
+  maximum: 86.89
+  average: 78.62
+  UpdateDay: '2022-05-04T03:30:50.173696'
   PFirstFoundDay: '2022-03-14T21:36:22.498526'
-  Rank: 14953
+  Rank: 15004
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
   port: 443
@@ -141,12 +142,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 52.01
-  maximum: 57.32
-  average: 54.0
-  UpdateDay: '2022-05-04T00:30:49.374864'
+  minimum: 52.29
+  maximum: 58.46
+  average: 54.52
+  UpdateDay: '2022-05-04T03:30:49.743586'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 14856
+  Rank: 14957
 - name: hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
   server: hk-hkg-shhk-001-tr.cdn.savoy.click
   port: 20089
@@ -156,27 +157,27 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 12.12
-  maximum: 91.12
-  average: 48.09
-  UpdateDay: '2022-05-04T00:30:48.225700'
+  minimum: 37.48
+  maximum: 67.16
+  average: 49.84
+  UpdateDay: '2022-05-04T03:30:47.437547'
   PFirstFoundDay: '2022-03-13T18:26:01.142104'
-  Rank: 13242
+  Rank: 13338
 - name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
   server: jp-tyo-04-tr.cdn.savoy.click
   port: 889
   type: trojan
   country: "\U0001F1E8\U0001F1F3 CN"
-  password: UiLPqefVfielqkDjEwBV
+  password: SfobRIcergHchqBFzzua
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 39.58
-  maximum: 74.23
-  average: 51.76
-  UpdateDay: '2022-05-04T00:30:48.253770'
+  minimum: 39.62
+  maximum: 50.51
+  average: 43.47
+  UpdateDay: '2022-05-04T03:30:47.397439'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 9100
+  Rank: 9151
 - alterId: 0
   cipher: auto
   http-opts:
@@ -201,22 +202,22 @@ proxies:
   average: 236.71
   UpdateDay: '2022-03-21T00:35:16.437700'
   PFirstFoundDay: '2022-03-14T10:30:07.032005'
-  Rank: 8983
+  Rank: 9033
 - name: tky3.ssgnode.ga:443@trojan
   server: tky3.ssgnode.ga
   port: 443
   type: trojan
   country: "\U0001F1EF\U0001F1F5 JP"
-  password: 82a115db-6e59-4319-973lWNFc1RmRBNk5NQU5KSnga3fa58ac5a3ef0-b4ab-11eb-b65e-1239d0255272
+  password: 82lWNFc1RmRBNk5NQU5KSnga3fa58ac5a3ef0-b4ab-11eb-b65e-1239d0255272
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 39.61
-  maximum: 55.27
-  average: 45.7
-  UpdateDay: '2022-05-04T00:30:49.325882'
+  minimum: 44.59
+  maximum: 53.78
+  average: 49.59
+  UpdateDay: '2022-05-04T03:30:49.755936'
   PFirstFoundDay: '2022-03-31T03:35:27.638826'
-  Rank: 6562
+  Rank: 6663
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
   port: 443
@@ -226,27 +227,27 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 38.82
-  maximum: 45.94
-  average: 41.41
-  UpdateDay: '2022-05-04T00:30:49.263090'
+  minimum: 41.27
+  maximum: 47.3
+  average: 44.8
+  UpdateDay: '2022-05-04T03:30:49.766855'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 6443
+  Rank: 6544
 - name: 72.167.45.6:443@trojan
   server: 72.167.45.6
   port: 443
   type: trojan
   country: "\U0001F1FA\U0001F1F8 US"
-  password: 28d98f761aca9d636f44db62544628eb
+  password: a3fa58b581353bb375d2ddad0f327938
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 177.84
-  maximum: 195.37
-  average: 185.06
-  UpdateDay: '2022-05-04T00:30:51.997650'
+  minimum: 160.85
+  maximum: 171.19
+  average: 164.42
+  UpdateDay: '2022-05-04T03:30:50.918958'
   PFirstFoundDay: '2022-03-31T09:34:10.783687'
-  Rank: 6425
+  Rank: 6474
 - name: www.tokyo2023.ga:443@trojan
   server: www.tokyo2023.ga
   port: 443
@@ -256,12 +257,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 39.24
-  maximum: 54.94
-  average: 47.86
-  UpdateDay: '2022-05-04T00:30:51.834649'
+  minimum: 44.0
+  maximum: 51.04
+  average: 46.81
+  UpdateDay: '2022-05-04T03:30:50.166632'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 6127
+  Rank: 6228
 - name: 184.168.127.50:443@trojan
   server: 184.168.127.50
   port: 443
@@ -271,12 +272,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 250.78
-  maximum: 258.05
-  average: 253.62
-  UpdateDay: '2022-05-04T00:30:52.388439'
+  minimum: 235.9
+  maximum: 237.38
+  average: 236.82
+  UpdateDay: '2022-05-04T03:30:51.040380'
   PFirstFoundDay: '2022-03-16T00:32:54.032660'
-  Rank: 6023
+  Rank: 6050
 - name: 45.9.10.103:443@trojan
   server: 45.9.10.103
   type: trojan
@@ -291,7 +292,7 @@ proxies:
   average: 162.13
   UpdateDay: '2022-03-30T11:21:53.634848'
   PFirstFoundDay: '2022-03-23T09:35:36.105483'
-  Rank: 5873
+  Rank: 5919
 - name: www.gomacau.gq:443@trojan
   server: www.gomacau.gq
   type: trojan
@@ -306,7 +307,7 @@ proxies:
   average: 61.31
   UpdateDay: '2022-04-02T15:35:09.325376'
   PFirstFoundDay: '2022-03-14T10:28:14.224892'
-  Rank: 5539
+  Rank: 5639
 - name: www.ggchk.ga:443@trojan
   password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
   port: 443
@@ -318,7 +319,7 @@ proxies:
   average: 56.06
   UpdateDay: '2022-04-03T15:12:54.456600'
   PFirstFoundDay: '2022-03-11T21:04:39.779731'
-  Rank: 5409
+  Rank: 5504
 - name: www.seetheworldjp.ga:443@trojan
   password: f42e1a2e-e650-44f4-8d17-bcb68663da18
   port: 443
@@ -330,7 +331,7 @@ proxies:
   average: 57.86
   UpdateDay: '2022-04-03T15:12:54.472724'
   PFirstFoundDay: '2022-03-11T21:01:49.367854'
-  Rank: 5379
+  Rank: 5465
 proxy-groups:
 - name: PG-default
   type: fallback
