--- a/daili2.yaml
+++ b/daili2.yaml
@@ -35,18 +35,18 @@ dns:
 proxies:
 - name: 101.132.192.212:30003@ss
   server: 101.132.192.212
-  type: ss
-  country: "\U0001F1E8\U0001F1F3CN"
   port: 30003
+  type: ss
+  country: "\U0001F1E8\U0001F1F3 CN"
   password: desperadoj.com_free_proxy_d39m
   cipher: aes-128-gcm
   success_rate: 100.0
-  minimum: 6.3
-  maximum: 9.17
-  average: 7.51
-  UpdateDay: '2022-05-06T12:30:26.254584'
+  minimum: 7.6
+  maximum: 9.18
+  average: 8.13
+  UpdateDay: '2022-05-06T15:30:29.561835'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 35925
+  Rank: 36026
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -60,21 +60,20 @@ proxies:
   average: 10.6
   UpdateDay: '2022-05-06T12:30:26.299131'
   PFirstFoundDay: '2022-03-14T10:17:16.436055'
-  Rank: 32551
+  Rank: 32651
 - name: 101.91.121.247:50004@ss
+  type: ss
   server: 101.91.121.247
   port: 50004
-  type: ss
-  country: "\U0001F1E8\U0001F1F3 CN"
-  password: '4415934295'
   cipher: aes-256-cfb
+  password: '4415934295'
   success_rate: 100.0
-  minimum: 10.23
-  maximum: 11.07
-  average: 10.58
-  UpdateDay: '2022-05-06T12:32:00.148382'
+  minimum: 9.48
+  maximum: 12.39
+  average: 10.61
+  UpdateDay: '2022-05-06T15:30:28.563021'
   PFirstFoundDay: '2022-03-11T23:29:04.876882'
-  Rank: 28142
+  Rank: 28243
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
   port: 1443
@@ -84,12 +83,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 59.64
-  maximum: 70.23
-  average: 65.2
-  UpdateDay: '2022-05-06T12:32:00.419959'
+  minimum: 97.47
+  maximum: 141.39
+  average: 117.32
+  UpdateDay: '2022-05-06T15:30:32.252580'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 24197
+  Rank: 24248
 - name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
   port: 21089
@@ -99,12 +98,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 18.8
-  maximum: 38.47
-  average: 31.72
-  UpdateDay: '2022-05-06T12:32:00.246598'
+  minimum: 40.0
+  maximum: 43.58
+  average: 41.68
+  UpdateDay: '2022-05-06T15:30:29.915597'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 21320
+  Rank: 21416
 - name: fkgfw-prod.i.sxl.cn:443@ss
   server: fkgfw-prod.i.sxl.cn
   port: 443
@@ -117,82 +116,82 @@ proxies:
   average: 89.1
   UpdateDay: '2022-03-24T18:35:12.668742'
   PFirstFoundDay: '2022-03-19T12:33:06.851449'
-  Rank: 20473
+  Rank: 20548
 - name: hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
   server: hk-hkg-shhk-001-tr.cdn.savoy.click
-  type: trojan
-  country: "\U0001F1E8\U0001F1F3CN"
   port: 20089
+  type: trojan
+  country: "\U0001F1E8\U0001F1F3 CN"
   password: SfobRIcergHchqBFzzua
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 36.8
-  maximum: 48.42
-  average: 41.33
-  UpdateDay: '2022-05-06T12:30:26.400460'
+  minimum: 10.51
+  maximum: 45.82
+  average: 27.14
+  UpdateDay: '2022-05-06T15:30:29.882987'
   PFirstFoundDay: '2022-03-13T18:26:01.142104'
-  Rank: 18716
+  Rank: 18817
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
-  type: trojan
-  country: "\U0001F1EF\U0001F1F5JP"
   port: 443
+  type: trojan
+  country: "\U0001F1EF\U0001F1F5 JP"
   password: 18e513fe-f7f4-353d-84ca-bc9646fb2528mielink
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 65.45
-  maximum: 85.37
-  average: 77.47
-  UpdateDay: '2022-05-06T12:30:33.400867'
+  minimum: 62.49
+  maximum: 72.4
+  average: 68.68
+  UpdateDay: '2022-05-06T15:30:32.047090'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 18385
+  Rank: 18411
 - name: 2.58.242.43:443@trojan
   server: 2.58.242.43
   port: 443
   type: trojan
   country: "\U0001F1F9\U0001F1FC TW"
-  password: YWVzLTI1Ni1nY206eHBRd3lWNFc1RmRBNk5NQU5KSng3M1VT
+  password: 7a9a3bb7-43b4YWVzLTI1Ni1nY206eHBRd3lWNFc1RmRBNk5NQU5KSng3M1VT
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 89.64
-  maximum: 96.37
-  average: 92.41
-  UpdateDay: '2022-05-06T12:32:01.484901'
+  minimum: 104.89
+  maximum: 114.33
+  average: 111.18
+  UpdateDay: '2022-05-06T15:30:32.590093'
   PFirstFoundDay: '2022-03-14T21:36:22.498526'
-  Rank: 17513
+  Rank: 17558
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
-  type: trojan
-  country: "\U0001F1ED\U0001F1F0HK"
   port: 443
+  type: trojan
+  country: "\U0001F1ED\U0001F1F0 HK"
   password: L1qNeGrY58ApwrRA
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 43.1
-  maximum: 47.76
-  average: 45.8
-  UpdateDay: '2022-05-06T12:30:29.576743'
+  minimum: 41.99
+  maximum: 46.22
+  average: 44.59
+  UpdateDay: '2022-05-06T15:30:31.885164'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 12067
+  Rank: 12168
 - name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
   server: jp-tyo-04-tr.cdn.savoy.click
   port: 889
   type: trojan
   country: "\U0001F1E8\U0001F1F3 CN"
-  password: UiLPqefVfielqkDjEwBV
+  password: SfobRIcergHchqBFzzua
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 41.4
-  maximum: 52.12
-  average: 46.01
-  UpdateDay: '2022-05-06T12:32:00.286640'
+  minimum: 41.44
+  maximum: 51.36
+  average: 45.01
+  UpdateDay: '2022-05-06T15:30:29.923129'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 11819
+  Rank: 11868
 - name: www.tokyo2023.ga:443@trojan
   server: www.tokyo2023.ga
   port: 443
@@ -202,12 +201,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 48.42
-  maximum: 60.65
-  average: 55.29
-  UpdateDay: '2022-05-06T12:32:01.476913'
+  minimum: 67.62
+  maximum: 78.38
+  average: 74.5
+  UpdateDay: '2022-05-06T15:30:32.549305'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 11579
+  Rank: 11665
 - alterId: 0
   cipher: auto
   http-opts:
@@ -232,7 +231,7 @@ proxies:
   average: 236.71
   UpdateDay: '2022-03-21T00:35:16.437700'
   PFirstFoundDay: '2022-03-14T10:30:07.032005'
-  Rank: 11329
+  Rank: 11379
 - name: www.gomacau.gq:443@trojan
   server: www.gomacau.gq
   type: trojan
@@ -247,7 +246,7 @@ proxies:
   average: 61.31
   UpdateDay: '2022-04-02T15:35:09.325376'
   PFirstFoundDay: '2022-03-14T10:28:14.224892'
-  Rank: 11268
+  Rank: 11363
 - name: www.ggchk.ga:443@trojan
   password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
   port: 443
@@ -259,7 +258,7 @@ proxies:
   average: 56.06
   UpdateDay: '2022-04-03T15:12:54.456600'
   PFirstFoundDay: '2022-03-11T21:04:39.779731'
-  Rank: 11049
+  Rank: 11149
 - name: www.seetheworldjp.ga:443@trojan
   password: f42e1a2e-e650-44f4-8d17-bcb68663da18
   port: 443
@@ -271,22 +270,22 @@ proxies:
   average: 57.86
   UpdateDay: '2022-04-03T15:12:54.472724'
   PFirstFoundDay: '2022-03-11T21:01:49.367854'
-  Rank: 10898
+  Rank: 10973
 - name: 72.167.45.6:443@trojan
   server: 72.167.45.6
-  type: trojan
-  country: "\U0001F1FA\U0001F1F8US"
   port: 443
+  type: trojan
+  country: "\U0001F1FA\U0001F1F8 US"
   password: a3fa58b581353bb375d2ddad0f327938
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 166.0
-  maximum: 171.76
-  average: 169.71
-  UpdateDay: '2022-05-06T12:31:24.579379'
+  minimum: 161.06
+  maximum: 177.23
+  average: 169.93
+  UpdateDay: '2022-05-06T15:30:32.829938'
   PFirstFoundDay: '2022-03-31T09:34:10.783687'
-  Rank: 9071
+  Rank: 9112
 - name: www.tokyo2021.ga:443@trojan
   server: www.tokyo2021.ga
   type: trojan
@@ -301,7 +300,7 @@ proxies:
   average: 41.15
   UpdateDay: '2022-04-02T15:34:32.686241'
   PFirstFoundDay: '2022-03-14T10:28:27.050426'
-  Rank: 8798
+  Rank: 8888
 - name: 45.9.10.103:443@trojan
   server: 45.9.10.103
   type: trojan
@@ -316,7 +315,7 @@ proxies:
   average: 162.13
   UpdateDay: '2022-03-30T11:21:53.634848'
   PFirstFoundDay: '2022-03-23T09:35:36.105483'
-  Rank: 8761
+  Rank: 8811
 - name: ssl.tcpbbr.net:443@trojan
   server: ssl.tcpbbr.net
   port: 443
@@ -325,13 +324,13 @@ proxies:
   password: 5a3d9b78-cb5b-11ea-82ef-f23c9164ca5d
   skip-cert-verify: true
   udp: true
-  success_rate: 100.0
-  minimum: 39.44
-  maximum: 49.58
-  average: 43.01
-  UpdateDay: '2022-05-06T12:32:00.350674'
+  success_rate: 66.67
+  minimum: 83.37
+  maximum: 83.51
+  average: 83.44
+  UpdateDay: '2022-05-06T15:30:36.910753'
   PFirstFoundDay: '2022-03-27T06:36:10.059372'
-  Rank: 7925
+  Rank: 8002
 proxy-groups:
 - name: PG-default
   type: fallback
